--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,13 @@
             android:textAlignment="center"
             android:textSize="48sp" />
 
+        <AutoCompleteTextView
+            android:id="@+id/Miasto_input"
+            android:hint="Input"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="Koszalin" />
+
         <Button
             android:id="@+id/button_prognozaPogody"
             android:layout_width="match_parent"
